--- a/[POO-Proyecto2]Server/src/view/NewCandidateView.form
+++ b/[POO-Proyecto2]Server/src/view/NewCandidateView.form
@@ -193,6 +193,15 @@
       </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="CanvasColor">
+      <Properties>
+        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+          <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
+            <LineBorder>
+              <Color PropertyName="color" blue="ff" green="99" red="99" type="rgb"/>
+            </LineBorder>
+          </Border>
+        </Property>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
