Presentación de los resultados

--- a/[POO-Proyecto2]Server/src/view/VotingCounter.form
+++ b/[POO-Proyecto2]Server/src/view/VotingCounter.form
@@ -87,6 +87,7 @@
     <Component class="javax.swing.JButton" name="BotonIrAlSTV">
       <Properties>
         <Property name="text" type="java.lang.String" value="Conteo de votos"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonIrAlSTVActionPerformed"/>
